--- a/offer.html
+++ b/offer.html
@@ -22,11 +22,11 @@
             <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end">
                 <nav id="menu" class="d-flex justify-content-end">      
                     <ul class="d-flex align-items-center">
-                        <li><a href="">O Nas</a></li>
+                        <li><a href="about.html">O Nas</a></li>
                         <li><a href="offer.html">Oferta</a></li>
-                        <li><a href="">Zespół</a></li>
-                        <li><a href="">Doświadczenie</a></li>
-                        <li><a href="">Kontakt</a></li>
+                        <li><a href="team.html">Zespół</a></li>
+                        <li><a href="experience.html">Doświadczenie</a></li>
+                        <li><a href="contact.html">Kontakt</a></li>
                     </ul>
                 </nav>    
                 
