--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <title>Title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+	<link href="hover.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
@@ -117,7 +117,7 @@
                             <div class="row">
                                 <a name="" id="" class="buttonRounded mt-5 shadow-none d-flex justify-content-lg-center justify-content-between" href="#" role="button">
                                     <div class="arrowRight mr-lg-4">
-                                        <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                                        <img src="img/arrow_right2.svg" class="img-fluid" alt="">
                                     </div>
                                     <span class="btnTxt flex-grow-1 align-self-center text-center">Wyślij</span>
                                 </a>
