--- a/experience.html
+++ b/experience.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="pl">
   <head>
-    <title>Title</title>
+    <title>Doświadczenie</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
@@ -89,15 +90,15 @@
                                 </h1>
                                 <img src="img/doswiadczenie.jpg" class="img-fluid d-lg-none" alt="">
                                 <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0">
-                                    Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami zróżnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne. Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                    <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded shadow-none buttonBlackShadow bg-white justify-content-lg-center justify-content-between" href="#" role="button">
+                                    Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami zróżnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne. Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                    <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded shadow-none buttonBlackShadow bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
                                             <img src="img/arrow_right.svg" class="img-fluid" alt="">
                                         </div>
                                         <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                                     </a>
-                                    <a name="" id="" class="d-lg-none mt-5 buttonRounded buttonBlackShadow d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                                    <a name="" id="" class="d-lg-none mt-5 buttonRounded buttonBlackShadow d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
-                                            <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                                            <img src="img/arrow_right2.svg" class="img-fluid" alt="">
                                         </div>
                                         <span class="btnTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                                     </a>
@@ -117,9 +118,21 @@
                     <h1 class="categoryOffer bluePrimaryTxt">
                         Wybrane projekty zrealizowane przez nas w ostatnim czasie:
                     </h1>
-                    <h2 class="mt-5 d-none d-lg-block">
-                        Wdrożenie strategii rozwoju w spółce Bluesoft zakończone transakcją sprzedaży <br>
+                    <h2 class="mt-5 d-none d-lg-block myTitles">
+                        Wdrożenie strategii rozwoju w spółce Bluesoft zakończone transakcją sprzedaży
                         do inwestora strategicznego
+                    </h2>
+                    <h2 class="mt-5 d-none d-lg-block myTitles">
+                        Realizacja inwestycji w spółkę technologiczną i skuteczne wyjście do inwestora strategicznego na przykładzie spółki Teroplan
+                    </h2> 
+                    <h2 class="mt-5 d-none d-lg-block myTitles">
+                        Wdrożenie modeli kontrolingowych w spółkach informatycznych
+                    </h2>
+                    <h2 class="mt-5 d-none d-lg-block myTitles">
+                        Wdrożenie wieloletniego modelu finansowego połączone z procesem sukcesji 
+                    </h2>
+                    <h2 class="mt-5 d-none d-lg-block myTitles">
+                        Wdrożenie systemu motywacyjnego dla Zarządu w spółce usługowej o obrocie 1 miliard zł
                     </h2>   
                 </div>
             </div>
@@ -130,33 +143,57 @@
                 <div class="col-12 d-flex justify-content-center  flex-lg-column flex-column-reverse experiencePageBackgroundBox">
                    <div class="row">
                        <div class="col-12 col-lg-8">
-                            <span>
+                            <span class="mySlides animated fadeInLeft">
                                 W latach 2018-2019 na zlecenie właścicieli spółki Bluesoft zrealizowaliśmy projekt wdrożenia procesów i narzędzi wspierających zarządzanie spółką w perspektywie średnioterminowej w postaci wielowymiarowego modelu operacyjno-finansowego na lata 2018-2020. W ramach realizacji strategii koordynowaliśmy proces akwizycji spółki Essembli, która uzupełniła pozycję rynkową Bluesoft o kompetencje rozwiązań dla energetyki. Następnie wspieraliśmy spółkę w procesie sprzedaży 100% udziałów do inwestora strategicznego. Proces zakończył się transakcją sprzedaży o wartości 200 milionów zł, nabywcą jest Orange Polska. 
                            </span>
+                           <span class="mySlides animated fadeInLeft">
+                                W ramach funduszu Giza Polish Ventures zidentyfikowaliśmy potencjał biznesowy spółki Teroplan (operator portalu e-podróżnik, dostawca rozwiązań informatycznych dla przewoźników pasażerskich) na wczesnym etapie rozwoju i przeprowadziliśmy inwestycję o wartości 3,6 mln zł (w kilku transzach). W latach 2016-2019 wspieraliśmy spółkę w realizacji założonej strategii, w ramach której m.in. zrealizowano akwizycję innej spółki technologicznej posiadającej kluczowe IP dla sektora docelowego, przeprowadzono ekspansję na dwa nowe rynki zagraniczne oraz wprowadzono na rynek nową linię biznesową - przewozy door to door pod marką Hoper. W 2019 roku zrealizowaliśmy proces wyjścia GPV z inwestycji do inwestora strategicznego  (Wirtualna Polska) przy wycenie spółki na poziomie 60 mln zł.                             </span>
+                            <span class="mySlides animated fadeInLeft">
+                                W okresie 2017-2020 zrealizowaliśmy kilka projektów wdrożenia pełnego modelu kontrolingowego w spółkach informatycznych. Projekt w każdym wypadku obejmował zdefiniowanie wymiarów modelu kontrolingowego, identyfikację źródeł danych, wdrożenie procesów kontrolingowych. Wynikiem realizacji wdrożenia był budżet oraz plan wieloletni oraz zestaw raportów zarządczych pozwalających na bieżącą analizę wykonania założonych planów budżetowych.                             </span>
+                            <span class="mySlides animated fadeInLeft">
+                                W latach 2014-2019 we współpracy z właścicielem oraz zarządem spółki z sektora dystrybucji i usług specjalistycznych (obroty na poziomie kilkudziesięciu milionów złotych) wdrożyliśmy kompleksowy model finansowy i kontrolingowy, który jednocześnie stanowił narzędzie wspierające sukcesję w obszarze zarządzania spółką, jako platforma komunikacji między właścicielem a managerami.                             </span>
+                            <span class="mySlides animated fadeInLeft">
+                                Braliśmy udział w opracowaniu długoterminowego systemu motywacyjnego dla Zarządu spółki usługowej opartego o wzrost wartości dla akcjonariuszy. Współpracujemy z właścicielami spółki oraz zarządem nad wdrożeniem systemu oraz rozliczaniem zamkniętych okresów.                            </span>
                        </div>
                    </div>
                    <div class="row mt-5 d-flex align-items-center mb-5 mb-lg-0">
                     <div class="col-12 col-lg-8 d-none d-lg-flex">
-                         <div class="progressBox">
-                            <div class="progressLine"></div>
+                         <div class="progressBox d-flex">
+                            <div class="progressLine" onclick="currentSlide(1)"></div>
+                            <div class="progressLine" onclick="currentSlide(2)"></div>
+                            <div class="progressLine" onclick="currentSlide(3)"></div>
+                            <div class="progressLine" onclick="currentSlide(4)"></div>
+                            <div class="progressLine" onclick="currentSlide(5)"></div>
                          </div>
                     </div>
                     <div class="col-12 col-lg-4 d-flex align-items-center justify-content-lg-center justify-content-between">
-                        <a href="#">
+                        <a onclick="plusSlides(-1)" class="cursor">
                             <img src="img/left.png" class="img-fluid" alt="">
                         </a>
                         <span class="bluePrimaryTxt sliderNumber mx-5">
-                            <sup><b>1</b></sup>/<sub>5</sub>
+                            <sup id="currentSlide">1</sup>/<sub>5</sub>
                         </span>
-                        <a href="#">
+                        <a onclick="plusSlides(1)" class="animated flash rightArrow cursor">
                             <img src="img/right.png" class="img-fluid" alt="">
                         </a>
                    </div>
                     <div class="col-12 d-lg-none">
-                        <h2 class="mt-5 text-black">
+                        <h2 class="mt-5 text-black myMobileTitles">
                             Wdrożenie strategii rozwoju w spółce Bluesoft zakończone transakcją sprzedaży <br>
                             do inwestora strategicznego
-                        </h2>   
+                        </h2>
+                        <h2 class="mt-5 text-black myMobileTitles">
+                            Realizacja inwestycji w spółkę technologiczną i skuteczne wyjście do inwestora strategicznego na przykładzie spółki Teroplan
+                        </h2> 
+                        <h2 class="mt-5 text-black myMobileTitles">
+                            Wdrożenie modeli kontrolingowych w spółkach informatycznych
+                        </h2> 
+                        <h2 class="mt-5 text-black myMobileTitles">
+                            Wdrożenie wieloletniego modelu finansowego połączone z procesem sukcesji 
+                        </h2> 
+                        <h2 class="mt-5 text-black myMobileTitles">
+                            Wdrożenie systemu motywacyjnego dla Zarządu w spółce usługowej o obrocie 1 miliard zł
+                        </h2>    
                     </div>
 
 
@@ -177,13 +214,13 @@
                         <div class="h-100 d-flex footerMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="">
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
-                                <a href="#">biuro@teamvalue.pl</a>
+                                <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                             </div>
                             <img src="img/stopka2.png" class="img-fluid" alt="">
                         </div>
                     </div>
                     <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="#">biuro@teamvalue.pl</a>
+                        <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 
@@ -194,6 +231,7 @@
 
     <!-- Optional JavaScript -->
     <script src="script/script.js"></script>
+    <script src="script/owl.carousel.min.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="script/acbc18888d.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
