--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="pl">
   <head>
-    <title>Title</title>
+    <title>Strona główna</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+	<link href="hover.css" rel="stylesheet">
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
@@ -97,9 +98,9 @@
                             Specjalizujemy się w maksymalizowaniu<br>
                             i budowaniu wartości przedsiębiorstw
                         </h1>
-                        <div class="arrowDown">
-                            <img src="img/arror_down.svg" class="img-fluid" alt="">
-                        </div>
+                        <a href="#experience" class="arrowDown">
+                            <img src="img/arror_down.svg" class="img-fluid animated slow bounce infinite" alt="">
+                        </a>
                     </div>
                 </div>
                 
@@ -112,13 +113,13 @@
                         Specjalizujemy się w maksymalizowaniu<br>
                         i budowaniu wartości przedsiębiorstw
                     </h1>
-                    <div class="arrowDown d-flex align-self-end mr-4">
+                    <a href="#experience" class="arrowDown d-flex align-self-end mr-4">
                         <img src="img/arror_down.svg" class="img-fluid" alt="">
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="container my-5 my-lg-0 py-5 py-lg-0 px-5 px-lg-0">
+        <div class="container my-5 my-lg-0 py-5 py-lg-0 px-5 px-lg-0" id="experience">
             <div class="row expierienceSection">
                 <div class="col-12 col-lg-6 d-flex justify-content-center flex-column">
                         <div class="row">
@@ -128,9 +129,9 @@
                             </span>
                         </div>
                         <div class="row mt-5">
-                            <a name="" id="" class="buttonRounded d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                            <a name=""  class="buttonRounded hvr-fade hvr-icon-wobble-horizontal  d-flex justify-content-lg-center justify-content-between" href="about.html" role="button">
                                 <div class="arrowRight mr-lg-4">
-                                    <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                                    <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                 </div>
                                 <span class="btnTxt flex-grow-1 align-self-center text-center">Poznaj Nas</span>
                             </a>
@@ -157,9 +158,9 @@
                         </span>
                     </div>
                     <div class="row mt-5 mb-5 mb-lg-0 pb-5 pb-lg-0 px-5 px-lg-0">
-                        <a name="" id="" class="buttonRounded d-flex justify-content-center bg-white bluePrimaryTxt" href="#" role="button">
+                        <a name="" id="" class="buttonRounded hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-center bg-white bluePrimaryTxt" href="offer.html" role="button">
                             <div class="arrowRight mr-4">
-                                <img src="img/arrow_right.svg" class="img-fluid" alt="">
+                                <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
                             </div>
                             <span class="btnTxt">Poznaj Ofertę</span>
                         </a>
@@ -179,15 +180,15 @@
                             </span>
                         </div>
                         <div class="row mt-5 pt-5 d-none d-lg-flex">
-                            <a name="" id="" class="buttonRounded d-flex justify-content-center" href="#" role="button">
+                            <a name="" id="" class="buttonRounded hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-center" href="team.html" role="button">
                                 <div class="arrowRight mr-4">
-                                    <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                                    <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                 </div>
                                 <span class="btnTxt">Poznaj zespół</span>
                             </a>
-                            <a name="" id="" class="buttonRounded d-flex justify-content-center ml-3" href="#" role="button">
+                            <a name="" id="" class="buttonRounded hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-center ml-3" href="experience.html" role="button">
                                 <div class="arrowRight mr-4">
-                                    <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                                    <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                 </div>
                                 <span class="btnTxt">Doświadczenie</span>
                             </a>
@@ -218,15 +219,15 @@
             </div>
             <!-- Mobile only -->
             <div class="row mt-3 pt-5 d-lg-none">
-                <a name="" id="" class="buttonRounded d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                <a name="" id="" class="buttonRounded hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
                     <div class="arrowRight mr-lg-4">
-                        <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                        <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                     </div>
                     <span class="btnTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                 </a>
-                <a name="" id="" class="buttonRounded mt-3 d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                <a name="" id="" class="buttonRounded mt-3 hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="experience.html" role="button">
                     <div class="arrowRight mr-lg-4">
-                        <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                        <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                     </div>
                     <span class="btnTxt flex-grow-1 align-self-center text-center">Doświadczenie</span>
                 </a>
@@ -245,13 +246,13 @@
                         <div class="h-100 d-flex">
                             <img src="img/stopka1.png" class="img-fluid" alt="">
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
-                                <a href="#">biuro@teamvalue.pl</a>
+                                <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                             </div>
                             <img src="img/stopka2.png" class="img-fluid" alt="">
                         </div>
                     </div>
                     <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="#">biuro@teamvalue.pl</a>
+                        <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 
@@ -264,8 +265,8 @@
     <script src="script/script.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="script/acbc18888d.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
