--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pl">
   <head>
-    <title>Title</title>
+    <title>Zespół</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -111,9 +111,9 @@
                         Posiada ponad 25 letnie doświadczenie w operacyjnym zarządzaniu dużymi przedsiębiorstwami, w tym spółkami giełdowymi, w szczególności w obszarach finansów i M&A . Zarządzając przedsiębiorstwami koncentrował się w szczególności na optymalizacja procesów wewnętrznych i poprawie efektywności. Zrealizował szereg projektów M&A, zarówno po stronie kupującego, jak i sprzedającego, zarządzając wszystkimi etapami procesu od selekcji potencjalnych celów akwizycyjnych/potencjalnych inwestorów, ewaluacji, negocjacji warunków inwestycji, zamknięcia inwestycji do zarządzania procesami integracji po transakcji.
                     </span>
                     <div class="row">
-                        <a name="" id="" class="buttonRounded mt-5 shadow-none d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                        <a name="" id="" class="buttonRounded mt-5 shadow-none d-flex justify-content-lg-center justify-content-between" href="https://www.linkedin.com/in/jaros%C5%82aw-plisz-4591448/" role="button">
                             <div class="arrowRight mr-lg-4">
-                                <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                                <img src="img/arrow_right2.svg" class="img-fluid" alt="">
                             </div>
                             <span class="btnTxt flex-grow-1 align-self-center text-center">Profil linkedin</span>
                         </a>
@@ -137,9 +137,9 @@
                     <span class="pr-5">
                         Posiada kilkunastoletnie doświadczenie w obszarze doradztwa strategicznego i biznesowego oraz procesów M&A, w tym realizacji procesów akwizycyjnych. Specjalizuje się w analizie biznesowej oraz identyfikacji generatorów wartości spółek, w szczególności w zakresie zasobów kapitału intelektualnego. Jako Manager Inwestycyjny funduszu Giza Polish Ventures zarządzał procesem identyfikacji i ewaluacji spółek innowacyjnych oraz procesami wyjść z inwestycji w spółki portfelowe.                    </span>
                     <div class="row">
-                        <a name="" id="" class="buttonRounded mt-5 shadow-none d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                        <a name="" id="" class="buttonRounded mt-5 shadow-none d-flex justify-content-lg-center justify-content-between" href="https://www.linkedin.com/in/wojciech-olszenka-83398380/" role="button">
                             <div class="arrowRight mr-lg-4">
-                                <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                                <img src="img/arrow_right2.svg" class="img-fluid" alt="">
                             </div>
                             <span class="btnTxt flex-grow-1 align-self-center text-center">Profil linkedin</span>
                         </a>
@@ -164,13 +164,13 @@
                         <div class="h-100 d-flex">
                             <img src="img/stopka1.png" class="img-fluid" alt="">
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
-                                <a href="#">biuro@teamvalue.pl</a>
+                                <a href="biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                             </div>
                             <img src="img/stopka2.png" class="img-fluid" alt="">
                         </div>
                     </div>
                     <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="#">biuro@teamvalue.pl</a>
+                        <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 
