--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pl">
   <head>
-    <title>Title</title>
+    <title>O nas</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -91,15 +91,15 @@
                                 <img src="img/onas.jpg" class="img-fluid d-lg-none" alt="">
                                 <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0">
                                     Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami z różnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne.<br><br> Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                
-                                    <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded shadow-none buttonBlackShadow bg-white justify-content-lg-center justify-content-between" href="#" role="button">
+                                    <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded shadow-none buttonBlackShadow bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
                                             <img src="img/arrow_right.svg" class="img-fluid" alt="">
                                         </div>
                                         <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                                     </a>
-                                    <a name="" id="" class="d-lg-none mt-5 buttonRounded buttonBlackShadow d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                                    <a name="" id="" class="d-lg-none mt-5 buttonRounded buttonBlackShadow d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
-                                            <img src="img/arrow_right2.png" class="img-fluid" alt="">
+                                            <img src="img/arrow_right2.svg" class="img-fluid" alt="">
                                         </div>
                                         <span class="btnTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                                     </a>
@@ -124,13 +124,13 @@
                         <div class="h-100 d-flex footerMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="">
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
-                                <a href="#">biuro@teamvalue.pl</a>
+                                <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                             </div>
                             <img src="img/stopka2.png" class="img-fluid" alt="">
                         </div>
                     </div>
                     <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="#">biuro@teamvalue.pl</a>
+                        <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 
