--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img src="img/menu.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end">
+            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
                 <nav id="menu" class="d-flex justify-content-end">      
                     <ul class="d-flex align-items-center">
                         <li><a href="about.html">O Nas</a></li>
@@ -89,23 +89,38 @@
                         </div>
                     </div>
                 </div>
-                <div class="homeBackground d-flex flex-column justify-content-end">
-                    <div class="homeLogo d-flex flex-grow-1 ml-4 ml-lg-5 pl-lg-5">
-                        <img src="img/logo_white.svg" class="img-fluid" alt="">
-                    </div>
-                    <div class="d-none homeBackgroundText d-lg-flex align-items-center justify-content-between px-lg-5">
-                        <h1 class="pl-lg-5 ml-5">
-                            Specjalizujemy się w maksymalizowaniu<br>
-                            i budowaniu wartości przedsiębiorstw
-                        </h1>
-                        <a href="#experience" class="arrowDown">
-                            <img src="img/arror_down.svg" class="img-fluid animated slow bounce infinite" alt="">
-                        </a>
+                <div class="homeBackground d-flex flex-column justify-content-start">
+                    <div class="container">
+                        <div class="homeLogo d-flex">
+                            <img src="img/logo_white.svg" class="img-fluid" alt="">
+                        </div>
                     </div>
                 </div>
                 
             </div>
         </div>
+
+
+
+        <div class="d-none d-lg-block row px-lg-5 m-0 " style="margin-top:-260px !important;">
+            <div class="col-12 p-0 ">
+                <div class="bgLeftHome d-none d-lg-block"></div>
+               <div class="container  d-flex justify-content-center flex-column p-0">
+                    <div class="d-none homeBackgroundText d-lg-flex align-items-center justify-content-between">
+                        <h1>
+                            Specjalizujemy się w maksymalizowaniu<br>
+                            i budowaniu wartości przedsiębiorstw
+                        </h1>
+                        <a href="#experience" class="arrowDown mr-5">
+                            <img src="img/arror_down.svg" class="img-fluid animated slow bounce infinite" alt="">
+                        </a>
+                    </div>
+               </div>
+            </div>
+        </div>
+
+
+        
         <div class="row d-lg-none m-0 p-0">
             <div class="col-12 p-0">
                 <div class="homeBackgroundText d-flex flex-column align-items-center justify-content-center px-lg-5">
@@ -120,7 +135,7 @@
             </div>
         </div>
         <div class="container my-5 my-lg-0 py-5 py-lg-0 px-5 px-lg-0" id="experience">
-            <div class="row expierienceSection">
+            <div class="row expierienceSection mx-0">
                 <div class="col-12 col-lg-6 d-flex justify-content-center flex-column">
                         <div class="row">
                             <span class="expierienceTxt"><span class="bluePrimaryTxt">Wykorzystujemy zgromadzone przez kilkanaście lat doświadczenia</span><br>
@@ -129,7 +144,7 @@
                             </span>
                         </div>
                         <div class="row mt-5">
-                            <a name=""  class="buttonRounded hvr-fade hvr-icon-wobble-horizontal  d-flex justify-content-lg-center justify-content-between" href="about.html" role="button">
+                            <a name=""  class="buttonRounded hvr-icon-wobble-horizontal  d-flex justify-content-lg-center justify-content-between" href="about.html" role="button">
                                 <div class="arrowRight mr-lg-4">
                                     <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                 </div>
@@ -151,14 +166,14 @@
             <div class="col-12 p-0 ">
                 <div class="bgLeftOffer d-none d-lg-block"></div>
                <div class="container offerBackground d-flex justify-content-center flex-column">
-                    <div class="row mt-5 mt-lg-0 pt-5 pt-lg-0 px-5 px-lg-0">
+                    <div class="row mt-5 mt-lg-0 pt-5 pt-lg-0 px-5 px-lg-0 mx-0">
                         <span class="text-white expierienceTxt">Oferujemy wsparcie w zakresie budowania i wdrażania strategii rozwoju, zarówno w drodze wzrostu<br>
                             organicznego, jak i poprzez akwizycje. Pomagamy włascicelom i zarządom przedsiebiorstw w implementacji <br>
                             efektywnych procesów zarządzania ukierunkowanych wzrost wartości.
                         </span>
                     </div>
-                    <div class="row mt-5 mb-5 mb-lg-0 pb-5 pb-lg-0 px-5 px-lg-0">
-                        <a name="" id="" class="buttonRounded hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-center bg-white bluePrimaryTxt" href="offer.html" role="button">
+                    <div class="row mt-5 mb-5 mb-lg-0 pb-5 pb-lg-0 px-5 px-lg-0 mx-0">
+                        <a name="" id="" class="buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-center bg-white bluePrimaryTxt" href="offer.html" role="button">
                             <div class="arrowRight mr-4">
                                 <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
                             </div>
@@ -173,20 +188,20 @@
         <div class="container my-5 my-lg-0 py-5 py-lg-0 px-5 px-lg-0">
             <div class="row teamSection">
                 <div class="col-12 col-lg-7 d-flex justify-content-center flex-column">
-                        <div class="row">
+                        <div class="row mx-0">
                             <span class="expierienceTxt">Wykorzystujemy zgromadzone przez kilkanaście lat doświadczenia<br>
                                 w bezpośredniej współpracy z właścicielami oraz zarządami spółek<br>
                                 w budowaniu i maksymalizowaniu wartości przedsiębiorstw.
                             </span>
                         </div>
-                        <div class="row mt-5 pt-5 d-none d-lg-flex">
-                            <a name="" id="" class="buttonRounded hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-center" href="team.html" role="button">
+                        <div class="row mt-5 pt-5 d-none d-lg-flex mx-0">
+                            <a name="" id="" class="buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-center" href="team.html" role="button">
                                 <div class="arrowRight mr-4">
                                     <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                 </div>
                                 <span class="btnTxt">Poznaj zespół</span>
                             </a>
-                            <a name="" id="" class="buttonRounded hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-center ml-3" href="experience.html" role="button">
+                            <a name="" id="" class="buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-center ml-3" href="experience.html" role="button">
                                 <div class="arrowRight mr-4">
                                     <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                 </div>
@@ -195,7 +210,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-5 d-flex flex-column justify-content-center mt-5 mt-lg-0">
-                        <div class="row">
+                        <div class="row mx-0">
                             <div class="col-12 d-flex justify-content-between align-items-lg-center p-0 flex-column-reverse flex-lg-row ">
                                 <div class="d-flex justify-content-center flex-column mt-3 mt-lg-0">
                                     <span class="teamName bluePrimaryTxt">Jarosław Plisz</span>
@@ -219,13 +234,13 @@
             </div>
             <!-- Mobile only -->
             <div class="row mt-3 pt-5 d-lg-none">
-                <a name="" id="" class="buttonRounded hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
+                <a name="" id="" class="buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
                     <div class="arrowRight mr-lg-4">
                         <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                     </div>
                     <span class="btnTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                 </a>
-                <a name="" id="" class="buttonRounded mt-3 hvr-fade hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="experience.html" role="button">
+                <a name="" id="" class="buttonRounded mt-3 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="experience.html" role="button">
                     <div class="arrowRight mr-lg-4">
                         <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                     </div>
@@ -243,7 +258,7 @@
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex">
+                        <div class="h-100 d-flex" id="stopkaMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="">
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
                                 <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
