--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex footerMail">
+                        <div class="h-100 d-flex" id="stopkaMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="">
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
                                 <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
