--- a/contact.html
+++ b/contact.html
@@ -130,22 +130,22 @@
         <div class="row px-lg-5 m-0">
             <div class="col-12 p-0">
                 <div class="stopka">
-                    <div class="container d-lg-flex align-items-center  justify-content-between p-0 d-none">
+                    <div class="container d-lg-flex align-items-center justify-content-between p-0 d-none">
                         <span>
                             <span class="footerCompany">Team Value Partners spółka z orgraniczoną odpowiedzialnością</span><br>
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex">
+                        <div class="h-100 d-flex" id="stopkaMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="">
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
-                                <a href="#">biuro@teamvalue.pl</a>
+                                <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                             </div>
                             <img src="img/stopka2.png" class="img-fluid" alt="">
                         </div>
                     </div>
                     <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="#">biuro@teamvalue.pl</a>
+                        <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 
