--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="hover.css" rel="stylesheet">
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
@@ -19,7 +20,7 @@
                     <img src="img/menu.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end">
+            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
                 <nav id="menu" class="d-flex justify-content-end">      
                     <ul class="d-flex align-items-center">
                         <li><a href="about.html">O Nas</a></li>
@@ -94,8 +95,8 @@
                 <img src="img/dots.png" class="img-fluid" alt=""> 
             </div>
             <div class="row mt-5 contactPageBox mb-5 mb-lg-0 mx-0">
-                <div class="col-12 col-lg-6">
-                    <div class="row d-flex flex-column">
+                <div class="col-12 col-lg-6 p-0">
+                    <div class="row d-flex flex-column mx-0">
                         <span class="text-black"><b>Team Value Partners spółka z ograniczoną odpowiedzialnością </b></span><br>
                         <span class="secondaryTxt"> Krasińskiego 29/9, <br>
                         40-019 Katowice, Polska <br>
@@ -104,7 +105,7 @@
                         NIP 5252711594 <br>
                         REGON 367315883</span>
                     </div>
-                    <div class="row mt-5 pt-5">
+                    <div class="row mt-5 pt-5 mx-0">
                         <a href="" class="mailContact">biuro@teamvalue.pl</a>
                     </div>
                 </div>
@@ -115,9 +116,9 @@
                             <input class="form-control form-control-sm mb-3" type="text" placeholder="Email">
                             <textarea class="form-control" rows="3" placeholder="Wiadomość"></textarea>
                             <div class="row">
-                                <a name="" id="" class="buttonRounded mt-5 shadow-none d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                                <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button">
                                     <div class="arrowRight mr-lg-4">
-                                        <img src="img/arrow_right2.svg" class="img-fluid" alt="">
+                                        <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                     </div>
                                     <span class="btnTxt flex-grow-1 align-self-center text-center">Wyślij</span>
                                 </a>
