--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <title>O nas</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link href="hover.css" rel="stylesheet">
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
@@ -19,7 +20,7 @@
                     <img src="img/menu.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end">
+            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
                 <nav id="menu" class="d-flex justify-content-end">      
                     <ul class="d-flex align-items-center">
                         <li><a href="about.html">O Nas</a></li>
@@ -91,15 +92,16 @@
                                 <img src="img/onas.jpg" class="img-fluid d-lg-none" alt="">
                                 <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0">
                                     Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami z różnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne.<br><br> Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                
-                                    <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded shadow-none buttonBlackShadow bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
+                                    <a name="" id="" class="d-none  mt-5 hvr-icon-wobble-horizontal d-lg-flex buttonRounded bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
-                                            <img src="img/arrow_right.svg" class="img-fluid" alt="">
+                                            <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
                                         </div>
                                         <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                                     </a>
-                                    <a name="" id="" class="d-lg-none mt-5 buttonRounded buttonBlackShadow d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
+                                    
+                                    <a name="" id="" class="d-lg-none mt-5 buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
-                                            <img src="img/arrow_right2.svg" class="img-fluid" alt="">
+                                            <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                         </div>
                                         <span class="btnTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                                     </a>
