--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    
+    <link href="hover.css" rel="stylesheet">
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
@@ -92,15 +93,16 @@
                                 <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0">
                                     Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami zróżnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne. 
                                     <br><br>
-                                    Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                    <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded shadow-none buttonBlackShadow bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
+                                    Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                    
+                                    <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded hvr-icon-wobble-horizontal bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
-                                            <img src="img/arrow_right.svg" class="img-fluid" alt="">
+                                            <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
                                         </div>
                                         <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                                     </a>
-                                    <a name="" id="" class="d-lg-none mt-5 buttonRounded buttonBlackShadow d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
+                                    <a name="" id="" class="d-lg-none mt-5 buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
-                                            <img src="img/arrow_right2.svg" class="img-fluid" alt="">
+                                            <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                         </div>
                                         <span class="btnTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
                                     </a>
@@ -114,9 +116,9 @@
             </div>
         </div>
 
-        <div class="container my-0 pb-5 px-5 px-lg-0">
-            <div class="row mt-5 ">
-                <div class="col-12">
+        <div class="container my-0 pb-5 pb-lg-0 px-5 px-lg-0">
+            <div class="row mt-5 mx-0">
+                <div class="col-12 p-0">
                     <h1 class="categoryOffer bluePrimaryTxt">
                         Wybrane projekty zrealizowane przez nas w ostatnim czasie:
                     </h1>
@@ -138,11 +140,11 @@
                     </h2>   
                 </div>
             </div>
-            <div class="row">
-                <div class="d-none d-lg-block position-absolute experienceWatermark pr-5">
+            <div class="row m-0">
+                <div class="d-none d-lg-block position-absolute experienceWatermark">
                     <img src="img/znak_wodny_2.png" class="img-fluid" alt=""> 
                 </div>
-                <div class="col-12 d-flex justify-content-center  flex-lg-column flex-column-reverse experiencePageBackgroundBox">
+                <div class="col-12 d-flex justify-content-center  flex-lg-column flex-column-reverse experiencePageBackgroundBox p-0">
                    <div class="row">
                        <div class="col-12 col-lg-8">
                             <span class="mySlides animated fadeInLeft">
@@ -175,7 +177,7 @@
                         <span class="bluePrimaryTxt sliderNumber mx-5">
                             <sup id="currentSlide">1</sup>/<sub>5</sub>
                         </span>
-                        <a onclick="plusSlides(1)" class="animated flash rightArrow cursor">
+                        <a onclick="plusSlides(1)" class="animated flash slower rightArrow cursor">
                             <img src="img/right.png" class="img-fluid" alt="">
                         </a>
                    </div>
@@ -213,7 +215,7 @@
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex footerMail">
+                        <div class="h-100 d-flex" id="stopkaMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="">
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
                                 <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
