--- a/offer.html
+++ b/offer.html
@@ -4,7 +4,8 @@
     <title>Oferta</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link href="hover.css" rel="stylesheet">
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
@@ -19,7 +20,7 @@
                     <img src="img/menu.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end">
+            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
                 <nav id="menu" class="d-flex justify-content-end">      
                     <ul class="d-flex align-items-center">
                         <li><a href="about.html">O Nas</a></li>
@@ -102,15 +103,15 @@
                                        
                                     </div>
                                     <div class="row mt-4 ml-lg-4 m-0 mb-5 mb-lg-0">
-                                        <a name="" id="" class="d-none d-lg-flex buttonRounded buttonBlackShadow bg-white justify-content-lg-center justify-content-between" href="#strategy" role="button">
+                                        <a name="" id="" class="d-none d-lg-flex hvr-icon-wobble-horizontal buttonRounded blackHoverShadow bg-white justify-content-lg-center justify-content-between" href="#strategy" role="button">
                                             <div class="arrowRight mr-lg-4">
-                                                <img src="img/arrow_right.svg" class="img-fluid" alt="">
+                                                <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
                                             </div>
                                             <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Dowiedz się wiecej</span>
                                         </a>
-                                        <a name="" id="" class="d-lg-none buttonRounded buttonBlackShadow d-flex justify-content-lg-center justify-content-between" href="#strategy" role="button">
+                                        <a name="" id="" class="d-lg-none buttonRounded hvr-icon-wobble-horizontal blackHoverShadow d-flex justify-content-lg-center justify-content-between" href="#strategy" role="button">
                                             <div class="arrowRight mr-lg-4">
-                                                <img src="img/arrow_right2.svg" class="img-fluid" alt="">
+                                                <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                             </div>
                                             <span class="btnTxt flex-grow-1 align-self-center text-center">Dowiedz się wiecej</span>
                                         </a>
@@ -127,15 +128,15 @@
                                        
                                     </div>
                                     <div class="row mt-4 ml-lg-4 m-0 mb-5 mb-lg-0">
-                                        <a name="" id="" class="d-none d-lg-flex buttonRounded buttonBlackShadow bg-white justify-content-lg-center justify-content-between" href="#manda" role="button">
+                                        <a name="" id="" class="d-none d-lg-flex buttonRounded hvr-icon-wobble-horizontal blackHoverShadow bg-white justify-content-lg-center justify-content-between" href="#manda" role="button">
                                             <div class="arrowRight mr-lg-4">
-                                                <img src="img/arrow_right.svg" class="img-fluid" alt="">
+                                                <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
                                             </div>
                                             <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Dowiedz się wiecej</span>
                                         </a>
-                                        <a name="" id="" class="d-lg-none buttonRounded buttonBlackShadow d-flex justify-content-lg-center justify-content-between" href="#manda" role="button">
+                                        <a name="" id="" class="d-lg-none buttonRounded hvr-icon-wobble-horizontal blackHoverShadow d-flex justify-content-lg-center justify-content-between" href="#manda" role="button">
                                             <div class="arrowRight mr-lg-4">
-                                                <img src="img/arrow_right2.svg" class="img-fluid" alt="">
+                                                <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                             </div>
                                             <span class="btnTxt flex-grow-1 align-self-center text-center">Dowiedz się wiecej</span>
                                         </a>
@@ -149,15 +150,15 @@
             </div>
         </div>
         <div class="container my-0 py-0 px-5 px-lg-0">
-            <div class="row my-5" id="strategy">
-                <div class="col-12">
+            <div class="row my-5 mx-0" id="strategy">
+                <div class="col-12 p-0">
                     <h1 class="categoryOffer">
                         Strategie wieloletnie i optymalizacja procesów,<br>
                         w tym systemy motywacyjne dla kadry zarządzającej.
                     </h1>        
                 </div>
             </div>
-            <div class="row ">
+            <div class="row mx-0">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox pb-5 pb-lg-0">
                     <div class="col-lg-3">
                         <img src="img/strategie.jpg" class="img-fluid" alt="">
@@ -171,7 +172,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5">
+            <div class="row mt-5 mb-5 mx-0">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
                     <div class="col-lg-3">
                         <img src="img/projektowanie.jpg" class="img-fluid" alt="">
@@ -190,7 +191,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5">
+            <div class="row mt-5 mb-5 mx-0">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
                     <div class="col-lg-3">
                         <img src="img/sukcesja.jpg" class="img-fluid" alt="">
@@ -209,14 +210,14 @@
                     </div>
                 </div>
             </div>
-            <div class="row my-5" id="manda">
-                <div class="col-12">
+            <div class="row my-5 mx-0" id="manda">
+                <div class="col-12 p-0">
                     <h1 class="categoryOffer">
                         Procesy M&A, sprzedaż spółek oraz inwestycje kapitałowe
                     </h1>        
                 </div>
             </div>
-            <div class="row ">
+            <div class="row mx-0">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox pb-5 pb-lg-0">
                     <div class="col-lg-3">
                         <img src="img/rozbudowa.jpg" class="img-fluid" alt="">
@@ -236,7 +237,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5">
+            <div class="row mt-5 mb-5 mx-0">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
                     <div class="col-lg-3">
                         <img src="img/zysk.jpg" class="img-fluid" alt="">
@@ -252,7 +253,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5">
+            <div class="row mt-5 mb-5 mx-0">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
                     <div class="col-lg-3">
                         <img src="img/finansowanie.jpg" class="img-fluid" alt="">
@@ -273,13 +274,13 @@
         <div class="row px-lg-5 m-0">
             <div class="col-12 p-0">
                 <div class="stopka">
-                    <div class="container d-lg-flex align-items-center  justify-content-between p-0 d-none">
+                    <div class="container d-lg-flex align-items-center justify-content-between p-0 d-none">
                         <span>
                             <span class="footerCompany">Team Value Partners spółka z orgraniczoną odpowiedzialnością</span><br>
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex">
+                        <div class="h-100 d-flex" id="stopkaMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="">
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
                                 <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
